Adding Batch service